--- a/main.css
+++ b/main.css
@@ -5,23 +5,10 @@ body {
 }
 
 
-div{
+div.block{
     padding: 10px 0px 40px 200px;
     margin: 0 0;
 }
-
-div.contact-waypoint{
-    margin:0;
-    padding: 0;
-}
-
-a.anchor{
-    display: block;
-    position: relative;
-    top: -60px;
-    visibility: hidden;
-}
-
 
 
 ul.menu {
@@ -43,14 +30,8 @@ ul.menu li{
 }
 
 ul.menu li.main{
-    float: left;
     padding: 10px 30px 0 200px;
     font-size: 30px;
-}
-
-
-ul.menu li{
-    color: white;
 }
 
 
@@ -58,11 +39,6 @@ ul.menu li a{
     display: block;
     text-align: center;
     text-decoration: none;
-    color: inherit;
-    transition-duration: 0.2s;
-}
-
-ul.menu li a.menu-item:hover{
-    color: #8af;
+    color: white;
     transition-duration: 0.2s;
 }
